tests/sumo/meso/junction_control/tls_coordination/bad/control_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (3ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_6_0+0805-8a20083101 started with time: 0.00
Simulation ended at time: 148.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 4ms
 Real time factor: 37000
 UPS: 367000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.14
 Duration: 48.93
 WaitingTime: 0.00
 TimeLoss: 26.86
 DepartDelay: 13.40

